--- a/React/react-app-1/src/styles/reset.css
+++ b/React/react-app-1/src/styles/reset.css
@@ -1,8 +1,9 @@
 * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
