--- a/React/react-app-1/src/components/nav/style.css
+++ b/React/react-app-1/src/components/nav/style.css
@@ -4,6 +4,14 @@
   background-color: #fff;
 }
 
-.nav a{
+.nav a {
   margin: 0 20px;
+}
+
+.logo {
+  font-size: 18px;
+  font-weight: bold;
+  color: #71777c;
+  margin: 0 20px;
+  cursor: pointer;
 }
