--- a/React/react-app-1/src/components/nav/style.css
+++ b/React/react-app-1/src/components/nav/style.css
@@ -3,15 +3,17 @@
   padding: 0 50px;
   background-color: #fff;
 }
-
-.nav a {
+.nav span {
   margin: 0 20px;
+  color: #71777c;
+  cursor: pointer;
 }
 
-.logo {
+.nav span.active {
+  color: #007fff;
+}
+
+.nav span.logo {
   font-size: 18px;
   font-weight: bold;
-  color: #71777c;
-  margin: 0 20px;
-  cursor: pointer;
 }
